# tts_stt

./: .gitignore  README.md  README.zh-CN.md  package.oo.yaml  pyproject.toml
.github/workflows/: auto-publish.yaml  layer.yml
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
flows/video2txt/: .flow.ui.oo.json
oo-locales/: en.json  zh-CN.json
tasks/speech-to-text/: main.py  main_optimized.py  task.oo.yaml
tasks/text-to-audio/: main.py  task.oo.yaml
